# VRCParam

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  osc.rs  speech.rs
src/components/: CommandManager.tsx  ParameterList.tsx  SpeechRecognizer.tsx
src/store/: index.ts
src/types/: index.ts
